# CPT-to-SoilType

./: LICENSE  Mytest.ipynb  README.md  pyproject.toml
notebooks/: eda.ipynb  eda_earthquake.ipynb  training_evaluation.ipynb
scripts/: process.py
src/cpt_to_soiltype/: utility.py
